data validation is completed

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,16 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\donga\\\\OneDrive\\\\Documents\\\\ML_Projects\\\\HousePricePredictor'"
+       "'c:\\\\Users\\\\donga\\\\OneDrive\\\\Documents\\\\ML_Projects\\\\HousePricePredictor\\\\research'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "'c:\\\\Users\\\\donga\\\\OneDrive\\\\Documents\\\\ML_Projects\\\\HousePricePredictor'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,23 +90,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'CONFIG_FILE_PATH' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mConfigurationManager\u001b[39;00m:\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\n\u001b[0;32m      3\u001b[0m             \u001b[38;5;28mself\u001b[39m,\n\u001b[0;32m      4\u001b[0m             config_filepath \u001b[38;5;241m=\u001b[39m CONFIG_FILE_PATH,\n\u001b[0;32m      5\u001b[0m             params_filepath \u001b[38;5;241m=\u001b[39m PARAMS_FILE_PATH,\n\u001b[0;32m      6\u001b[0m             schema_filepath \u001b[38;5;241m=\u001b[39m SCHEMA_FILE_PATH):\n\u001b[0;32m      8\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig \u001b[38;5;241m=\u001b[39m read_yaml(config_filepath)\n",
-      "Cell \u001b[1;32mIn[28], line 4\u001b[0m, in \u001b[0;36mConfigurationManager\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mConfigurationManager\u001b[39;00m:\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\n\u001b[0;32m      3\u001b[0m             \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m----> 4\u001b[0m             config_filepath \u001b[38;5;241m=\u001b[39m \u001b[43mCONFIG_FILE_PATH\u001b[49m,\n\u001b[0;32m      5\u001b[0m             params_filepath \u001b[38;5;241m=\u001b[39m PARAMS_FILE_PATH,\n\u001b[0;32m      6\u001b[0m             schema_filepath \u001b[38;5;241m=\u001b[39m SCHEMA_FILE_PATH):\n\u001b[0;32m      8\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig \u001b[38;5;241m=\u001b[39m read_yaml(config_filepath)\n\u001b[0;32m      9\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams \u001b[38;5;241m=\u001b[39m read_yaml(params_filepath)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'CONFIG_FILE_PATH' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "CONFIG_FILE_PATH = Path(\"config/config.yaml\")\n",
+    "PARAMS_FILE_PATH = Path(\"params.yaml\")\n",
+    "SCHEMA_FILE_PATH = Path(\"schema.yaml\")\n",
+    "\n",
     "class ConfigurationManager:\n",
     "    def __init__(\n",
     "            self,\n",
@@ -118,7 +111,7 @@
     "        self.params = read_yaml(params_filepath)\n",
     "        self.schema = read_yaml(schema_filepath)\n",
     "\n",
-    "        create_directories([self.artifacts_root])\n",
+    "        create_directories([self.config.artifacts_root])\n",
     "\n",
     "        # Set up artifacts_root\n",
     "        # self.artifacts_root = self.config.get(\"artifacts_root\", \"./artifacts\")\n",
@@ -141,10 +134,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os \n",
+    "import urllib.request as request\n",
+    "import tarfile\n",
+    "import zipfile\n",
+    "from housePricePrediction import logger\n",
+    "from housePricePrediction.utils.common import get_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataIngestion:\n",
+    "    def __init__(self, config: DataIngestionConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "\n",
+    "    def download_file(self):\n",
+    "        if not os.path.exists(self.config.local_data_file):\n",
+    "            filename,headers = request.urlretrieve(\n",
+    "                url = self.config.source_URL,\n",
+    "                filename = self.config.local_data_file\n",
+    "            )\n",
+    "            logger.info(f\"{filename} download! with following info: \\n{headers}\")\n",
+    "        else:\n",
+    "            logger.info(f\"File already exists of size: {get_size(Path(self.config.local_data_file))}\")\n",
+    "\n",
+    "        \n",
+    "    def extract_zip_file(self):\n",
+    "        \"\"\" \n",
+    "        zip_file_path: str\n",
+    "        Extracts the zip file into the data directory\n",
+    "        Function returns None\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        os.makedirs(self.config.unzip_dir, exist_ok=True)\n",
+    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
+    "            zip_ref.extractall(self.config.unzip_dir)\n",
+    "\n",
+    "    def extract_tgz_file(self):\n",
+    "        \"\"\" \n",
+    "        Extracts a .tgz file to specific directory.\n",
+    "        \"\"\"\n",
+    "        with tarfile.open(self.config.local_data_file,'r:gz') as tar:\n",
+    "            tar.extractall(path= self.config.unzip_dir)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-11-23 11:22:37,864 : INFO: common : yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-11-23 11:22:37,867 : INFO: common : yaml file: params.yaml loaded successfully]\n",
+      "[2024-11-23 11:22:37,871 : INFO: common : yaml file: schema.yaml loaded successfully]\n",
+      "[2024-11-23 11:22:37,872 : INFO: common : created directory at: artifacts]\n",
+      "[2024-11-23 11:22:37,874 : INFO: common : created directory at: artifacts/data_ingestion]\n",
+      "[2024-11-23 11:22:37,875 : INFO: 3354594285 : File already exists of size: ~439KB]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_ingestion_config = config.get_data_ingestion_config()\n",
+    "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
+    "    data_ingestion.download_file()\n",
+    "    data_ingestion.extract_tgz_file()\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
   }
  ],
  "metadata": {
